--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ body {
 
 @media (max-width:768px) {
 
-    .aaa { text-align: center;
-}
-
+    .aaa {
+        text-align: center;
+    }
 }
 
 .centered-main-page-element {
@@ -65,12 +65,14 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
+
 button:hover {
     color: #3a3A3a;
 }
 
 
 /* Heading */
+
 h3,
 label[for="new-task"] {
     color: #333;
